--- a/views/bookings_planning.js.erb
+++ b/views/bookings_planning.js.erb
@@ -1,6 +1,6 @@
 <%= partial 'booking_planning.js'.to_sym %>
 
-require(['jquery', 'jquery.ui', 'jquery.ui.datepicker-es', 
+require(['jquery', 'jquery.ui', 'jquery.ui.touch-punch', 'jquery.ui.datepicker-es',
          'jquery.ui.datepicker.validation','jquery.formparams', 'datejs'], 
         function($) {
 
