--- a/views/config_booking_frontend.erb
+++ b/views/config_booking_frontend.erb
@@ -63,7 +63,7 @@
           <div class="block-header bg-gray-lighter">
             <ul class="block-options">
               <li>
-                <button id="new_page_button" type="button"><i class="si si-plus"></i></button>
+                <button id="new_page_button" class="btn push-5-r push-10" type="button"><i class="fa fa-plus"></i> Nueva página</button>
               </li>
             </ul>
             <h3 class="block-title">Páginas</h3>
@@ -88,6 +88,7 @@
                   <div class="btn-group">
                     <button class="btn btn-xs btn-default edit_page_button" rel="<%=page.id%>" type="button"><i class="fa fa-pencil"></i></button>
                     <button class="btn btn-xs btn-default delete_page_button" rel="<%=page.id%>" type="button"><i class="fa fa-times"></i></button>
+                    <button class="btn btn-xs btn-default open_in_browser_button" rel="<%=page.alias%>" type="button"><i class="fa fa-external-link"></i></button>
                   </div>
                 </td>
               </tr>
@@ -105,7 +106,7 @@
           <div class="block-header bg-gray-lighter">
             <ul class="block-options">
               <li>
-                <button id="new_primary_links_menu_item" type="button"><i class="si si-plus"></i></button>
+                <button class="btn btn-success push-5-r push-10" type="button"><i class="fa fa-plus"></i> Nuevo elemento</button>
               </li>
             </ul>
             <h3 class="block-title">Menú principal</h3>
@@ -151,7 +152,7 @@
           <div class="block-header bg-gray-lighter">
             <ul class="block-options">
               <li>
-                <button id="new_secondary_links_menu_item" type="button"><i class="si si-plus"></i></button>
+                <button class="btn btn-success push-5-r push-10" type="button"><i class="fa fa-plus"></i> Nuevo elemento</button>
               </li>
             </ul>
             <h3 class="block-title">Menú secundario</h3>
